Removed unnecessary JavaFX files